--- a/extras/custom_dark_theme.css
+++ b/extras/custom_dark_theme.css
@@ -3,6 +3,8 @@
 /* Dark background: #d f e 5 f 2; */
 
 /* TOP MENU */
+
+
 .sm-dox {
     background: #dfe5f2 !important;
 }
@@ -160,7 +162,9 @@ div.header {
 }
 
 /*********************************************/
-/**           Memitem and memtitle          **/
+/**           Memitem and mem
+
+**/
 /*********************************************/
 .memdoc {
     border: 1px solid #A8B8D9;
@@ -384,6 +388,7 @@ td.memItemRight {
 /*********************************************/
 .titlearea {
     border-bottom: 1px solid #32363d;
+    background-color: #000000;
 }
 
 /*********************************************/
@@ -447,3 +452,8 @@ h6.glow {
  }
 
 
+
+
+#titlearea {
+     background-color: #000000;
+}
